--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@nestjs/common": "11.0.11",
     "@nestjs/config": "4.0.1",
     "@nestjs/core": "11.0.11",
-    "@nestjs/jwt": "11.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.11",
     "@nestjs/typeorm": "11.0.0",
+    "bcryptjs": "3.0.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "pg": "^8.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -38,6 +41,7 @@
     "@nestjs/cli": "11.0.5",
     "@nestjs/schematics": "11.0.2",
     "@nestjs/testing": "11.0.11",
+    "@types/bcryptjs": "2.4.6",
     "@types/express": "5.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
