--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "pg": "^8.14.0",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "7.8.2",
@@ -46,6 +48,7 @@
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/passport-jwt": "4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
