--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@nestjs/config": "4.0.1",
     "@nestjs/core": "11.0.11",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.11",
     "@nestjs/typeorm": "11.0.0",
     "bcryptjs": "3.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "pg": "^8.14.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "pg": "^8.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "7.8.2",
@@ -47,8 +48,8 @@
     "@types/express": "5.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
     "@types/passport-jwt": "4.0.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
